fixed width adjustment on mobile

--- a/styles/gacha.module.scss
+++ b/styles/gacha.module.scss
@@ -6,9 +6,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-width: 30%;
+  min-width: 25%;
   padding-top: 3rem;
   padding-bottom: 3rem;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  @media screen and (max-width: 768px) {
+    min-width: 80%;
+  }
 }
 .defaultEgg {
   padding-bottom: 3.5rem;
